--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,16 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.token>${env.SONAR_TOKEN}</sonar.token>
+    <sonar.projectName>MyOwnProject</sonar.projectName>
+    <sonar.projectKey>MyOwnProject</sonar.projectKey>
+    <sonar.host.url>http://localhost:9000</sonar.host.url>
+    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+    <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
   <build>
     <pluginManagement>
@@ -70,6 +78,36 @@
           </execution>
         </executions>
       </plugin>
+
+      <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>4.0.0.2929</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.10</version>
+        <executions>
+            <!-- Prepare agent for test coverage -->
+            <execution>
+                <id>prepare-agent</id>
+                <goals>
+                    <goal>prepare-agent</goal>
+                </goals>
+            </execution>
+            <!-- Generate report after tests -->
+            <execution>
+                <id>report</id>
+                <phase>verify</phase>
+                <goals>
+                    <goal>report</goal>
+                </goals>
+            </execution>
+        </executions>
+      </plugin> 
+
     </plugins>
   </build>
 </project>
