--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.token>${env.SONAR_TOKEN}</sonar.token>
     <sonar.projectName>MyOwnProject</sonar.projectName>
     <sonar.projectKey>MyOwnProject</sonar.projectKey>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
