--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <sonar.token>${env.SONAR_TOKEN}</sonar.token>
     <sonar.projectName>MyOwnProject</sonar.projectName>
     <sonar.projectKey>MyOwnProject</sonar.projectKey>
+    <sonar.host.url>http://localhost:9000</sonar.host.url>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
     <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
   </properties>
